--- a/cloudpilot-ionic/assets-pwa-src/splashscreen.html
+++ b/cloudpilot-ionic/assets-pwa-src/splashscreen.html
@@ -1,52 +1,55 @@
 <html>
-    <head>
-        <style>
-            .container {
-                display: flex;
-                width: 100%;
-                height: 100%;
-                align-items: center;
-                justify-content: center;
-                flex-direction: column;
-            }
 
+<head>
+    <style>
+        .container {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+        }
+
+        img {
+            filter: drop-shadow(0 0 20px #aaa);
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        @media (max-aspect-ratio: 4/3) {
             img {
-                filter: drop-shadow(0 0 20px #aaa);
-                display: block;
-                margin-left: auto;
-                margin-right: auto;
+                width: 50vw;
             }
+        }
 
-            @media (max-aspect-ratio: 4/3) {
-                img {
-                    width: 50vw;
-                }
+        @media (min-aspect-ratio: 4/3) {
+            img {
+                height: 50vh;
             }
+        }
 
-            @media (min-aspect-ratio: 4/3) {
-                img {
-                    height: 50vh;
-                }
+        body {
+            background: white;
+        }
+
+        @media (prefers-color-scheme:dark) {
+            img {
+                filter: invert() drop-shadow(0 0 20px #888);
             }
 
             body {
-                background: white;;
+                background: black;
             }
+        }
+    </style>
+</head>
 
-            @media (prefers-color-scheme:dark) {
-                img {
-                    filter: invert() drop-shadow(0 0 20px #888);
-                }
+<body>
+    <div class="container">
+        <img src="icon.svg"></img>
+    </div>
+</body>
 
-                body {
-                    background: black;
-                }
-            }
-        </style>
-    </head>
-    <body>
-        <div class="container">
-            <img src="icon.svg"></img>
-        </div>
-    </body>
 </html>
