More icons tuning.

--- a/cloudpilot-ionic/assets-pwa-src/icon.html
+++ b/cloudpilot-ionic/assets-pwa-src/icon.html
@@ -5,10 +5,11 @@
         img {
             width: 100%;
             height: 100%;
+            filter: drop-shadow(0 0 20px #888);
         }
 
         body {
-            background: transparent;
+            background: white;
         }
 
         @media (width: 180px) {
