--- a/cloudpilot-ionic/assets-pwa-src/icon.html
+++ b/cloudpilot-ionic/assets-pwa-src/icon.html
@@ -5,7 +5,7 @@
         img {
             width: 100%;
             height: 100%;
-            filter: drop-shadow(0 0 20px #888);
+            filter: drop-shadow(0 0 20px #aaa);
         }
 
         body {
