Tune icon sizes

--- a/cloudpilot-ionic/assets-pwa-src/icon.html
+++ b/cloudpilot-ionic/assets-pwa-src/icon.html
@@ -21,14 +21,19 @@
         }
 
         img {
-            width: 75%;
-            height: 75%;
+            width: 80%;
+            height: 80%;
         }
 
         /* iOS */
         @media (width: 180px) {
             .container {
                 border-radius: 0;
+            }
+
+            img {
+                width: 85%;
+                height: 85%;
             }
         }
 
