--- a/cloudpilot-ionic/assets-pwa-src/icon.html
+++ b/cloudpilot-ionic/assets-pwa-src/icon.html
@@ -39,10 +39,13 @@
 
         /* Favicon */
         @media (width: 196px) {
+            .container {
+                background: none;
+            }
+
             img {
-                filter: none;
-                width: 85%;
-                height: 85%;
+                width: 100%;
+                height: 100%;
             }
         }
     </style>
