--- a/cloudpilot-ionic/src/index.html
+++ b/cloudpilot-ionic/src/index.html
@@ -56,7 +56,7 @@
         media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
 
     <meta charset="utf-8" />
-    <title>Cloudpilot</title>
+    <title>CloudpilotEmu</title>
 
     <base href="/" />
 
