--- a/cloudpilot-ionic/assets-pwa-src/splashscreen.html
+++ b/cloudpilot-ionic/assets-pwa-src/splashscreen.html
@@ -23,13 +23,13 @@
 
         @media (max-aspect-ratio: 4/3) {
             img {
-                width: 70vw;
+                width: 30vw;
             }
         }
 
         @media (min-aspect-ratio: 4/3) {
             img {
-                height: 70vh;
+                height: 30vh;
             }
         }
 
@@ -56,8 +56,8 @@
 
 <body>
     <div class="container">
-        <img class="light" src="cp-palmblue-splash-002.svg"></img>
-        <img class="dark" src="cp-palmblue-splash-002-bw.svg"></img>
+        <img class="light" src="cp-palmblue-001.svg"></img>
+        <img class="dark" src="cp-palmblue-001-bw.svg"></img>
     </div>
 </body>
 
