--- a/cloudpilot-ionic/src/index.html
+++ b/cloudpilot-ionic/src/index.html
@@ -55,7 +55,7 @@
     <link rel="apple-touch-startup-image" href="assets-pwa/apple-splash-1136-640.jpg"
         media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)" />
     <meta charset="utf-8" />
-    <title>Cloudpilot</title>
+    <title>CloudpilotEmu</title>
     <base href="/" />
     <meta name="color-scheme" content="light dark" />
     <meta name="viewport"
