--- a/web/embedded/public/index.html
+++ b/web/embedded/public/index.html
@@ -2,10 +2,17 @@
 
 <head>
     <script src="cloudpilot-emu.js"></script>
+
+    <style>
+        canvas {
+            width: 100%;
+            height: 100%;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Hello world</h1>
+    <canvas></canvas>
 
     <script>
         (async function () {
@@ -15,8 +22,14 @@
             }
 
             const image = await imageResponse.arrayBuffer();
+            const emulator = await cloudpilot.createEmulator();
+            const canvas = document.getElementsByTagName('canvas')[0];
 
-            const emulator = await cloudpilot.createEmulator(new Uint8Array(image));
+            emulator.loadSession(new Uint8Array(image));
+            emulator
+                .setCanvas(canvas)
+                .bindInput(canvas)
+                .resume();
         })().catch(e => console.log(e));
     </script>
 </body>
